--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,5 +14,7 @@
   <app-root></app-root>
 
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script src="https://smtpjs.com/v3/smtp.js">
+  </script>
 </body>
 </html>
